--- a/code/H_Pylori.Rmd
+++ b/code/H_Pylori.Rmd
@@ -21,6 +21,9 @@ library(GGally)
 library(sjPlot)
 library(ggpubr)
 
+library(ROCR)
+library(tidymodels)
+
 library(webshot)
 ```
 
@@ -118,17 +121,19 @@ merged_data %>%
   geom_boxplot()+
   geom_jitter(alpha = 0.3)+
   scale_y_log10()+
-  geom_hline(yintercept = 30, col = "darkred", size = 1.5, linetype="dashed")+ # отмечаем порог 30 
+  geom_hline(yintercept = 30, col = "darkred", size = 1.5, linetype="dashed")+
+   geom_hline(yintercept = 10, col = "orange", size = 1.5, linetype="dashed")+ # отмечаем порог 30 
   xlab( "Age groups")+
   ylab("Anti-H.Pylori IgG titer")+
+  ggtitle("Quantitative anti-H.Pylori IgG in different age groups")+
   theme_classic(base_size = 20)
 
-#ggsave("IgG_hpylori_cutoff.jpeg", width = 15, height =  10)
+ ggsave("IgG_hpylori_cutoff.png", width = 10)
 # Визуально кажется, что есть скачок между 31-35 и 36-40.
 
 
 ```
-Исходя из полученной визуализации отмечаем порог в 30 ед/мл. Далее будем использовать этот порого и порого в 10 ед/мл (из литературы).
+Исходя из полученной визуализации отмечаем порог в 30 ед/мл. Далее будем использовать этот порог и порог в 10 ед/мл (из литературы).
 
 ```{r}
 hpylori_anova <- aov(IgG_hpylori ~ age_grouped, data = merged_data)
@@ -232,9 +237,10 @@ merged_data |>
   geom_label(t3, mapping = aes(x=age_grouped, y = as.numeric(IgG_hpylori_10EIU)^(-10), label = for_label), col = "darkgreen", size = 6 )+
   ylab(" ")+ xlab("Age groups")+
   guides(fill = guide_legend("Anti-H.Pylori \n IgG Titer"))+
+  ggtitle("The proportion of subjects with an increased titer  \n of IgG to H. pylori in different age groups")+
   theme_classic(base_size = 20)
 
-# ggsave("age_groups_pylori.jpeg", width = 15, height =  10)
+ ggsave("age_groups_pylori_10.jpeg")
 
   
 
@@ -288,9 +294,10 @@ merged_data |>
   geom_label(t3, mapping = aes(x=age_grouped, y = as.numeric(IgG_hpylori_30EIU)^(-10), label = for_label), col = "darkgreen", size = 6 )+
   ylab(" ")+ xlab("Age groups")+
   guides(fill = guide_legend("Anti-H.Pylori \n IgG Titer"))+
+  ggtitle("The proportion of subjects with an increased titer  \n of IgG to H. pylori in different age groups")+
   theme_classic(base_size = 20)
 
-# ggsave("age_groups_pylori.jpeg", width = 15, height =  10)
+ ggsave("age_groups_pylori_30.jpeg")
 
   
 
@@ -307,15 +314,43 @@ merged_data |>
 
 merged_data$ever_smokers <- as.factor(ifelse(merged_data$smoking == 1| merged_data$smoked_previously == 1, 1, 0))
 
+merged_data$smoking_experience <-  ifelse(merged_data$smoking == 1, (merged_data$age - merged_data$smoking_start_age), 
+                                          (merged_data$smoking_giveup_age - merged_data$smoking_start_age))
+
+
+merged_data$smoking_more_30 <- ifelse(merged_data$smoking_experience >= 30, 1, 0)
+
 ```
 
+
+```{r}
+cor.test(merged_data$age, merged_data$smoking_experience)
+
+chisq.test(merged_data$age, merged_data$smoking_more_30)
+```
+
+
 # Строим момодели на основании логистической регрессии
+
+```{r}
+# sapply(merged_data, function(x) sum(is.na(x)))
+
+
+```
+```{r}
+df_for_model <- merged_data |> 
+  select(c(age, smoking, ever_smokers, under_18, spouse_or_partner, income_level,  IgG_hpylori, IgG_hpylori_10EIU, IgG_hpylori_30EIU)) |> 
+  na.omit()
+
+
+
+```
 
 Для порога 10:
 ## Строим intercept-only model
 
 ```{r}
-fit10_0 <- glm(IgG_hpylori_10EIU ~ 1, data = merged_data, family = "binomial")
+fit10_0 <- glm(IgG_hpylori_10EIU ~ 1, data = df_for_model, family = "binomial")
 
 summary(fit10_0)
 
@@ -331,12 +366,61 @@ summary(fit10_0)
 от того, курит человек или нет (есть данные в литературе, и они противоречивые). Строим модель:
 
 ```{r}
-fit10_1 <- glm(IgG_hpylori_10EIU ~ age+under_18 +smoking+ spouse_or_partner+income_level, data = merged_data, family = "binomial")
+fit10_1 <- glm(IgG_hpylori_10EIU ~ age+ under_18 +smoking+ spouse_or_partner+income_level, data = df_for_model, family = "binomial")
 summary(fit10_1)
 
 
 
 ```
+
+
+```{r}
+# предсказываем вероятность наличия инфекции (порог 10, 1 модель)
+df_for_model$HP_10_prob_1 <- predict(object = fit10_1, type = "response")
+
+pred_fit10_1 <- prediction(df_for_model$HP_10_prob_1, df_for_model$IgG_hpylori_10EIU)
+perf_fit10_1 <- performance(pred_fit10_1, "tpr", "fpr")
+
+auc10_1 <- performance(pred_fit10_1, "auc") # 0.624
+
+str(auc10_1)
+
+plot(perf_fit10_1, colorize = T, print.cutoffs.at = seq(0,1, by = 0.1))
+
+
+perf_fit10_1_spec <- performance(pred_fit10_1, x.measure = "cutoff", measure = "spec")
+perf_fit10_1_sens <- performance(pred_fit10_1, x.measure = "cutoff", measure = "sens")
+perf_fit10_1_acc <- performance(pred_fit10_1, x.measure = "cutoff", measure = "acc")
+
+
+
+plot(perf_fit10_1_spec, col = "red", lwd = 2)
+plot(add = T, perf_fit10_1_sens, col = "green", lwd = 2 )
+plot(add = T, perf_fit10_1_acc, col = "blue", lwd = 2)
+abline(v = 0.61, lwd = 2)
+legend(x = 0.75, y = 0.35, c("spec", "sens", "accuracy", "cutoff 0.61"), lty = 1, col = c('red', 'green', 'blue', 'black'), cex = 1, lwd = 2)
+
+
+
+df_for_model$HP_10_resp_1 <- ifelse(df_for_model$HP_10_prob_1 > 0.61, 1,0)
+df_for_model$HP_10_resp_correct_1 <- ifelse(df_for_model$HP_10_resp_1 == df_for_model$IgG_hpylori_10EIU, 1, 0)
+
+ggplot(df_for_model, aes(HP_10_prob, fill = as.factor(HP_10_resp_correct)))+
+  geom_dotplot()
+
+
+table(df_for_model$HP_10_resp_correct_1)
+
+table(df_for_model$IgG_hpylori_10EIU, df_for_model$HP_10_resp_1)
+
+
+sensitivity(data = df_for_model, as.factor(IgG_hpylori_10EIU), as.factor(HP_10_resp_1)) # чувствительность
+specificity(data = df_for_model, as.factor(IgG_hpylori_10EIU), as.factor(HP_10_resp_1)) # специфичность
+
+
+```
+
+
 
 # Предполагаем, что титр IgG к H.Pylori может зависить от различных факторов:
 от возраста истытуемых, 
@@ -348,12 +432,52 @@ summary(fit10_1)
 ```{r}
 
 
-fit10_2 <- glm(IgG_hpylori_10EIU ~ age+under_18+spouse_or_partner+ever_smokers+income_level, data = merged_data, family = "binomial")
+fit10_2 <- glm(IgG_hpylori_10EIU ~ age+under_18+spouse_or_partner+ever_smokers+income_level, data = df_for_model, family = "binomial")
 summary(fit10_2)
 
 
 ```
 
+```{r}
+# предсказываем вероятность наличия инфекции (порог 10, 2 модель)
+df_for_model$HP_10_prob_2 <- predict(object = fit10_2, type = "response")
+
+pred_fit10_2 <- prediction(df_for_model$HP_10_prob_2, df_for_model$IgG_hpylori_10EIU)
+perf_fit10_2 <- performance(pred_fit10_2, "tpr", "fpr")
+
+auc10_2 <- performance(pred_fit10_2, "auc") # 0.63
+
+str(auc10_2)
+
+plot(perf_fit10_2, colorize = T, print.cutoffs.at = seq(0,1, by = 0.1))
+
+
+perf_fit10_2_spec <- performance(pred_fit10_2, x.measure = "cutoff", measure = "spec")
+perf_fit10_2_sens <- performance(pred_fit10_2, x.measure = "cutoff", measure = "sens")
+perf_fit10_2_acc <- performance(pred_fit10_2, x.measure = "cutoff", measure = "acc")
+
+
+
+plot(perf_fit10_2_spec, col = "red", lwd = 2)
+plot(add = T, perf_fit10_2_sens, col = "green", lwd = 2 )
+plot(add = T, perf_fit10_2_acc, col = "blue", lwd = 2)
+abline(v = 0.615, lwd = 2)
+legend(x = 0.75, y = 0.35, c("spec", "sens", "accuracy", "cutoff 0.615"), lty = 1, col = c('red', 'green', 'blue', 'black'), cex = 1, lwd = 2)
+
+
+
+df_for_model$HP_10_resp_2 <- ifelse(df_for_model$HP_10_prob_2 > 0.615, 1,0)
+df_for_model$HP_10_resp_correct_2 <- ifelse(df_for_model$HP_10_resp_2 == df_for_model$IgG_hpylori_10EIU, 1, 0)
+
+ggplot(df_for_model, aes(HP_10_prob, fill = as.factor(HP_10_resp_correct_2)))+
+  geom_dotplot()
+
+
+table(df_for_model$HP_10_resp_correct_2)
+
+sensitivity(data = df_for_model, as.factor(IgG_hpylori_10EIU), as.factor(HP_10_resp_2)) # чувствительность
+specificity(data = df_for_model, as.factor(IgG_hpylori_10EIU), as.factor(HP_10_resp_2)) # специфичность
+```
 
 
 Для порога 30:
@@ -377,12 +501,53 @@ summary(fit30_0)
 от того, курит человек или нет (есть данные в литературе, и они противоречивые). Строим модель:
 
 ```{r}
-fit30_1 <- glm(IgG_hpylori_30EIU ~ age+under_18 +smoking+ spouse_or_partner+income_level, data = merged_data, family = "binomial")
+fit30_1 <- glm(IgG_hpylori_30EIU ~ age+under_18 +smoking+ spouse_or_partner+income_level, data = df_for_model, family = "binomial")
 summary(fit30_1)
 
 
 
 ```
+
+```{r}
+# предсказываем вероятность наличия инфекции (порог 30, 1 модель)
+df_for_model$HP_30_prob_1 <- predict(object = fit30_1, type = "response")
+
+pred_fit30_1 <- prediction(df_for_model$HP_30_prob_1, df_for_model$IgG_hpylori_30EIU)
+perf_fit30_1 <- performance(pred_fit30_1, "tpr", "fpr")
+
+auc30_1 <- performance(pred_fit30_1, "auc") # 0.628
+
+str(auc30_1)
+
+plot(perf_fit30_1, colorize = T, print.cutoffs.at = seq(0,1, by = 0.1))
+
+
+perf_fit30_1_spec <- performance(pred_fit30_1, x.measure = "cutoff", measure = "spec")
+perf_fit30_1_sens <- performance(pred_fit30_1, x.measure = "cutoff", measure = "sens")
+perf_fit30_1_acc <- performance(pred_fit30_1, x.measure = "cutoff", measure = "acc")
+
+
+
+plot(perf_fit30_1_spec, col = "red", lwd = 2)
+plot(add = T, perf_fit30_1_sens, col = "green", lwd = 2 )
+plot(add = T, perf_fit30_1_acc, col = "blue", lwd = 2)
+abline(v = 0.46, lwd = 2)
+legend(x = 0.6, y = 0.35, c("spec", "sens", "accuracy", "cutoff 0.46"), lty = 1, col = c('red', 'green', 'blue', 'black'), cex = 1, lwd = 2)
+
+
+
+df_for_model$HP_30_resp_1 <- ifelse(df_for_model$HP_30_prob_1 > 0.46, 1,0)
+df_for_model$HP_30_resp_correct_1 <- ifelse(df_for_model$HP_30_resp_1 == df_for_model$IgG_hpylori_30EIU, 1, 0)
+
+ggplot(df_for_model, aes(HP_30_prob_1, fill = as.factor(HP_30_resp_correct_1)))+
+  geom_dotplot()
+
+table(df_for_model$HP_30_resp_correct_1)
+
+sensitivity(data = df_for_model, as.factor(IgG_hpylori_10EIU), as.factor(HP_30_resp_1)) # чувствительность
+specificity(data = df_for_model, as.factor(IgG_hpylori_10EIU), as.factor(HP_30_resp_1)) # специфичность
+```
+
 
 # Предполагаем, что титр IgG к H.Pylori может зависить от различных факторов:
 от возраста истытуемых, 
@@ -394,11 +559,51 @@ summary(fit30_1)
 ```{r}
 
 
-fit30_2 <- glm(IgG_hpylori_30EIU ~ age+under_18+spouse_or_partner+ever_smokers+income_level, data = merged_data, family = "binomial")
+fit30_2 <- glm(IgG_hpylori_30EIU ~ age+under_18+spouse_or_partner+ever_smokers+income_level, data = df_for_model, family = "binomial")
 summary(fit30_2)
 
 
 
+```
+
+```{r}
+# предсказываем вероятность наличия инфекции (порог 30, 2 модель)
+df_for_model$HP_30_prob_2 <- predict(object = fit30_2, type = "response")
+
+pred_fit30_2 <- prediction(df_for_model$HP_30_prob_2, df_for_model$IgG_hpylori_30EIU)
+perf_fit30_2 <- performance(pred_fit30_2, "tpr", "fpr")
+
+auc30_2 <- performance(pred_fit30_2, "auc") # 0.635
+
+str(auc30_2)
+
+plot(perf_fit30_2, colorize = T, print.cutoffs.at = seq(0,1, by = 0.1))
+
+
+perf_fit30_2_spec <- performance(pred_fit30_2, x.measure = "cutoff", measure = "spec")
+perf_fit30_2_sens <- performance(pred_fit30_2, x.measure = "cutoff", measure = "sens")
+perf_fit30_2_acc <- performance(pred_fit30_2, x.measure = "cutoff", measure = "acc")
+
+
+
+plot(perf_fit30_2_spec, col = "red", lwd = 2)
+plot(add = T, perf_fit30_2_sens, col = "green", lwd = 2 )
+plot(add = T, perf_fit30_2_acc, col = "blue", lwd = 2)
+abline(v = 0.462, lwd = 2)
+legend(x = 0.6, y = 0.35, c("spec", "sens", "accuracy", "cutoff 0.46"), lty = 1, col = c('red', 'green', 'blue', 'black'), cex = 1, lwd = 2)
+
+
+
+df_for_model$HP_30_resp_2 <- ifelse(df_for_model$HP_30_prob_1 > 0.462, 1,0)
+df_for_model$HP_30_resp_correct_2 <- ifelse(df_for_model$HP_30_resp_2 == df_for_model$IgG_hpylori_30EIU, 1, 0)
+
+ggplot(df_for_model, aes(HP_30_prob_2, fill = as.factor(HP_30_resp_correct_2)))+
+  geom_dotplot()
+
+table(df_for_model$HP_30_resp_correct_2)
+
+sensitivity(data = df_for_model, as.factor(IgG_hpylori_10EIU), as.factor(HP_30_resp_2)) # чувствительность
+specificity(data = df_for_model, as.factor(IgG_hpylori_10EIU), as.factor(HP_30_resp_2)) # специфичность
 ```
 
 Сравнение каждой из моделей с нулевой моделью.
@@ -413,11 +618,22 @@ anova(fit30_2, test = "Chisq")
 
 
 ```
+```{r}
+capture.output(anova(fit10_1, test = "Chisq"),
+               anova(fit10_2, test = "Chisq"),
+               anova(fit30_1, test = "Chisq"),
+               anova(fit30_2, test = "Chisq"),
+               file = "C:/Biostat2021/final_project/bioinf_project/anova_non_int.doc")
+
+
+```
+
+
 # Сводная таблица с моделями без взаимодействий (для обоих порогов)
 
 ```{r}
 
-tab_model(fit10_1, fit10_2, fit30_1, fit30_2, show.obs = T, show.r2 = T,
+tab_model(fit10_1, fit10_2, fit30_1, fit30_2, show.obs = T, show.r2 = F,
           auto.label = FALSE,
           pred.labels = c("intercept", 
                           "age",
@@ -430,9 +646,11 @@ tab_model(fit10_1, fit10_2, fit30_1, fit30_2, show.obs = T, show.r2 = T,
                           "income level: \n Can buy car but not real estate",
                           "income level: \n Can buy real estate and more",
                           "smoked ever, including now"),
-          dv.labels = c("Model 1 (10 EIU)", "Model 2 (10 EIU)", "Model 1 (30 EIU)", "Model 2 (30 EIU)" ))
+          dv.labels = c("Model 1 (10 EIU)", "Model 2 (10 EIU)", "Model 1 (30 EIU)", "Model 2 (30 EIU)"),
+          file = "models.html")
 
 
+webshot("models.html", "models.png")
 
 ```
 
@@ -447,7 +665,7 @@ tab_model(fit10_1, fit10_2, fit30_1, fit30_2, show.obs = T, show.r2 = T,
 fit10_int_1, fit10_int_2, fit10_int_3 - модели, которые учитывают сожителей
 
 ```{r}
-fit10_int_1 <- glm(IgG_hpylori_10EIU ~ age *spouse_or_partner, data = merged_data, family = "binomial")
+fit10_int_1 <- glm(IgG_hpylori_10EIU ~ age *spouse_or_partner, data = df_for_model, family = "binomial")
 summary(fit10_int_1)
 
 
@@ -455,14 +673,14 @@ summary(fit10_int_1)
 
 
 ```{r}
-fit10_int_2 <- glm(IgG_hpylori_10EIU ~ age*under_18 , data = merged_data, family = "binomial")
+fit10_int_2 <- glm(IgG_hpylori_10EIU ~ age*under_18 , data = df_for_model, family = "binomial")
 summary(fit10_int_2)
 
 
 ```
 
 ```{r}
-fit10_int_3 <- glm(IgG_hpylori_10EIU ~ age*under_18*spouse_or_partner , data = merged_data, family = "binomial")
+fit10_int_3 <- glm(IgG_hpylori_10EIU ~ age*under_18*spouse_or_partner , data = df_for_model, family = "binomial")
 summary(fit10_int_3)
 
 
@@ -472,7 +690,20 @@ summary(fit10_int_3)
 
 
 ```{r}
-tab_model(fit10_int_1, fit10_int_2, fit10_int_3)
+tab_model(fit10_int_1, fit10_int_2, fit10_int_3,
+          show.r2 = F,
+          auto.label = FALSE,
+          pred.labels = c("intercept", 
+                          "age",
+                          "having spouse or partner",
+                          "interaction (age:having spouse or partner)",
+                          "having children",
+                          "interaction (age:having children)",
+                          "interaction (having children:having spouse or partner)",
+                          "interaction (age:having children:having spouse or partner)"),
+          dv.labels = c("Model 1", "Model 2", "Model 3"), 
+          file = "models_interaction.html")
+webshot("models_interaction.html", "models_interaction.png")
 
 
 
@@ -507,6 +738,8 @@ summary(fit10_int_3)
 ```
 
 Форест-плот для визуализации модели
+
+
 ```{r}
 
 
@@ -520,7 +753,41 @@ ggcoef_model(fit10_2, exponentiate = TRUE,
                income_level = "Income level"
              )
               )
-# ggsave("forest_plot_fit10_2.jpeg")
+ ggsave("forest_plot_fit10_2.jpeg")
 ```
 
+```{r}
+
+
+ggcoef_model(fit30_1, exponentiate = TRUE, 
+             intercept = TRUE,
+             variable_labels = c(
+               age = "Age",
+               under_18 = "Have children",
+               spouse_or_partner = "Live with spouse or partner",
+               smoking = "Smoke now",
+               income_level = "Income level"
+             )
+              )+
+  ggtitle ("Model 1")
+ ggsave("forest_plot_fit30_1.jpeg")
+```
+
+
+```{r}
+
+
+ggcoef_model(fit30_2, exponentiate = TRUE, 
+             intercept = TRUE,
+             variable_labels = c(
+               age = "Age",
+               under_18 = "Have children",
+               spouse_or_partner = "Live with spouse or partner",
+               ever_smokers = "Smoked ever, including now",
+               income_level = "Income level"
+             )
+              )+
+  ggtitle("Model 2")
+ ggsave("forest_plot_fit30_2.jpeg")
+```
 
