--- a/code/prediction_MNA_by_IgG/ELISA_vs_MNA.Rmd
+++ b/code/prediction_MNA_by_IgG/ELISA_vs_MNA.Rmd
@@ -794,6 +794,209 @@ ggroc(roc_80, cex= 1.2, color = '#A6611A')+
   theme_classic2()
 
 ```
+__________________________________________
+#Визуально оценим корреляцию признаков
+```{r}
+datagg = select(data_for_ab, -2, -4, -5, -7, -8, -10)
 
+ggplot(datagg, aes(y = IgG_testB_quantitative, x = neutralizing_antibodies_quantitative)) +
+  geom_jitter(size = 0.8) +
+  ylab("ELISA ABBOT") + 
+  xlab("Neutralizing antibodies")+
+  scale_x_log10()+
+  theme_bw()
+  scale_x_continuous(breaks = c(5, 10, 20, 40, 80, 160, 320, 640), trans = "log2")
 
+ggplot(datagg, aes(y = IgA_or_G_or_M_testC_quantitative, x = neutralizing_antibodies_quantitative)) +
+  geom_jitter(size = 0.8) +
+  ylab("ELISA genetico") + 
+  xlab("Neutralizing antibodies")+
+  scale_x_log10()+
+  theme_bw()
+  scale_x_continuous(breaks = c(5, 10, 20, 40, 80, 160, 320, 640), trans = "log2")
+
+ggplot(datagg, aes(y = IgG_or_M_testD_quantitative, x = neutralizing_antibodies_quantitative)) +
+  geom_jitter(size = 0.8) +
+  ylab("ELISA VECTORBEST") + 
+  xlab("Neutralizing antibodies")+
+  theme_bw() +
+  scale_x_continuous(breaks = c(5, 10, 20, 40, 80, 160, 320, 640), trans = "log2")
+```
+
+#Проанализируем данные с помощью линейной регрессии
+```{r}
+lm_vector = lm(Nab~vector,data_for_nab)
+
+summary(lm_vector)
+
+lm_abbott =lm(Nab~abbott, data_for_nab)
+
+summary(lm_abbott)
+
+lm_genetico = lm(Nab~genetico, data_for_nab)
+
+summary(lm_genetico)
+```
+#Создадим модель с помощью randomForest на основе 3 тест систем
+```{r}
+
+datasetrf<-test_nab
+
+set.seed(100)
+
+ind <- sample(2, nrow(datasetrf), replace = TRUE, prob = c(0.8, 0.2))
+
+train <- datasetrf[ind==1,]
+test <- datasetrf[ind==2,]
+
+rf <- randomForest(`MNT 1:80` ~ vector+abbott+genetico, data=train, proximity=TRUE)
+
+print(rf)
+
+p1 <- predict(rf, train)
+
+confusionMatrix(p1, train$ `MNT 1:80`)
+
+p2 <- predict(rf, test)
+
+confusionMatrix(p2, test$`MNT 1:80`)
+
+plot(rf)
+
+hist(treesize(rf),
+     main = "No. of Nodes for the Trees",
+     col = "green")
+varImpPlot(rf,
+           sort = T,
+           n.var = 10,
+           main = "Top 10 - Variable Importance")
+  importance(rf)
+
+pred_prob_rf <-as.data.frame( predict(rf, test, type="prob"))
+
+roc_rf <- pROC::roc(test$`MNT 1:80`, pred_prob_rf$`SARS-Cov-2`)
+
+roc_rf
+
+caTools::colAUC(pred_prob_rf$`SARS-Cov-2`, test$`MNT 1:80`, plotROC = T)
+
+```
+#Проделаем тоже самое с каждой тест-системой отдельно
+```{r}
+set.seed(100)
+
+ind <- sample(2, nrow(datasetrf), replace = TRUE, prob = c(0.8, 0.2))
+
+train <- datasetrf[ind==1,]
+test <- datasetrf[ind==2,]
+
+rf_vector <- randomForest(`MNT 1:80`~ vector, data=train, proximity=TRUE)
+
+print(rf_vector)
+
+p1_vector <- predict(rf_vector, train)
+
+confusionMatrix(p1_vector, train$ `MNT 1:80`)
+
+p2_vector <- predict(rf_vector, test)
+
+confusionMatrix(p2_vector, test$`MNT 1:80`)
+
+plot(rf_vector)
+
+pred_prob_rf_vector <-as.data.frame( predict(rf_vector, test, type="prob"))
+
+roc_rf_vector <- pROC::roc(test$`MNT 1:80`, pred_prob_rf_vector$`SARS-Cov-2`)
+
+roc_rf_vector
+```
+
+```{r}
+set.seed(100)
+
+ind <- sample(2, nrow(datasetrf), replace = TRUE, prob = c(0.8, 0.2))
+
+train <- datasetrf[ind==1,]
+test <- datasetrf[ind==2,]
+
+rf_abbott <- randomForest(`MNT 1:80`~ abbott, data=train, proximity=TRUE)
+
+print(rf_abbott)
+
+p1_abbott <- predict(rf_abbott, train)
+
+confusionMatrix(p1_abbott, train$ `MNT 1:80`)
+
+p2_abbott <- predict(rf_abbott, test)
+
+confusionMatrix(p2_abbott, test$`MNT 1:80`)
+
+plot(rf_abbott)
+
+pred_prob_rf_abbott <-as.data.frame( predict(rf_abbott, test, type="prob"))
+
+# ROC value
+roc_rf_abbott <- pROC::roc(test$`MNT 1:80`, pred_prob_rf_abbott$`SARS-Cov-2`)
+
+roc_rf_abbott
+```
+
+```{r}
+set.seed(100)
+
+ind <- sample(2, nrow(datasetrf), replace = TRUE, prob = c(0.8, 0.2))
+
+train <- datasetrf[ind==1,]
+test <- datasetrf[ind==2,]
+
+rf_genetico <- randomForest(`MNT 1:80`~ genetico, data=train, proximity=TRUE)
+
+print(rf_genetico)
+
+p1_genetico <- predict(rf_genetico, train)
+
+confusionMatrix(p1_genetico, train$ `MNT 1:80`)
+
+p2_genetico <- predict(rf_genetico, test)
+
+confusionMatrix(p2_genetico, test$`MNT 1:80`)
+
+plot(rf_genetico)
+
+pred_prob_rf_genetico <-as.data.frame( predict(rf_genetico, test, type="prob"))
+
+roc_rf_genetico <- pROC::roc(test$`MNT 1:80`, pred_prob_rf_genetico$`SARS-Cov-2`)
+
+roc_rf_genetico
+
+```
+#Построим ROC-кривую по каждой из моделей
+```{r}
+caTools::colAUC(pred_prob_rf_genetico$`SARS-Cov-2`, test$`MNT 1:80`, plotROC = T)
+
+caTools::colAUC(pred_prob_rf_abbott$`SARS-Cov-2`, test$`MNT 1:80`, plotROC = T)
+
+caTools::colAUC(pred_prob_rf_vector$`SARS-Cov-2`, test$`MNT 1:80`, plotROC = T)
+```
+
+#Сравним получившиеся результаты с визуализацией с помощью боксплотов
+```{r}
+ggplot(test_nab, aes(y = vector, x = `MNT 1:80` )) +
+  geom_boxplot() + 
+  ylab("IgG (VectorBest)") + 
+  xlab("Neutralizing antibodies YES/NO") + 
+  theme_bw()
+  
+ggplot(test_nab, aes(y = abbott, x = `MNT 1:80` )) +
+  geom_boxplot() + 
+  ylab("IgG (Abbott)") + 
+  xlab("Neutralizing antibodies YES/NO") + 
+  theme_bw()
+  
+ggplot(test_nab, aes(y = genetico, x = `MNT 1:80` )) +
+  geom_boxplot() + 
+  ylab("IgG (Genetico)") + 
+  xlab("Neutralizing antibodies YES/NO") + 
+  theme_bw()
+```
 
